<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!-- WARNING: Eclipse auto-generated file.
              Any modifications will be overwritten.
              To include a user specific buildfile here, simply create one in the same
              directory with the processing instruction <?eclipse.ant.import?>
              as the first entry and export the buildfile again. --><project basedir="." default="build" name="froggercw">
    <property environment="env"/>
    <property name="debuglevel" value="source,lines,vars"/>
    <property name="target" value="1.8"/>
    <property name="source" value="1.8"/>
    <path id="JavaFX SDK.libraryclasspath"/>
    <path id="JAVAFX.userclasspath">
        <pathelement location="../../Documents/jdk-15/javafx-sdk-15.0.1/lib/javafx.base.jar"/>
        <pathelement location="../../Documents/jdk-15/javafx-sdk-15.0.1/lib/javafx.controls.jar"/>
        <pathelement location="../../Documents/jdk-15/javafx-sdk-15.0.1/lib/javafx.fxml.jar"/>
        <pathelement location="../../Documents/jdk-15/javafx-sdk-15.0.1/lib/javafx.graphics.jar"/>
        <pathelement location="../../Documents/jdk-15/javafx-sdk-15.0.1/lib/javafx.media.jar"/>
        <pathelement location="../../Documents/jdk-15/javafx-sdk-15.0.1/lib/javafx.swing.jar"/>
        <pathelement location="../../Documents/jdk-15/javafx-sdk-15.0.1/lib/javafx.web.jar"/>
        <pathelement location="../../Documents/jdk-15/javafx-sdk-15.0.1/lib/javafx-swt.jar"/>
        <pathelement location="../../Documents/jdk-15/javafx-sdk-15.0.1/lib/src.zip"/>
    </path>
    <path id="froggercw.classpath">
        <pathelement location="bin"/>
        <path refid="JavaFX SDK.libraryclasspath"/>
        <path refid="JAVAFX.userclasspath"/>
    </path>
    <path id="run.froggercw.classpath">
        <path refid="froggercw.classpath"/>
        <path refid="JavaFX SDK.libraryclasspath"/>
        <path refid="JAVAFX.userclasspath"/>
    </path>
    <path id="run.GameMenu.classpath">
        <path refid="froggercw.classpath"/>
        <path refid="JavaFX SDK.libraryclasspath"/>
        <path refid="JAVAFX.userclasspath"/>
    </path>
    <path id="run.Main (4).classpath">
        <path refid="froggercw.classpath"/>
        <path refid="JavaFX SDK.libraryclasspath"/>
        <path refid="JAVAFX.userclasspath"/>
    </path>
    <target name="init">
        <mkdir dir="bin"/>
        <copy includeemptydirs="false" todir="bin">
            <fileset dir="src">
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
    </target>
    <target name="clean">
        <delete dir="bin"/>
    </target>
    <target depends="clean" name="cleanall"/>
    <target depends="build-subprojects,build-project" name="build"/>
    <target name="build-subprojects"/>
    <target depends="init" name="build-project">
        <echo message="${ant.project.name}: ${ant.file}"/>
        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
            <src path="src"/>
            <classpath refid="froggercw.classpath"/>
        </javac>
    </target>
    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
    <target name="froggercw">
        <java classname="p4_group_8_repo.Main" failonerror="true" fork="yes">
            <jvmarg line="--module-path C:\Users\khale\Documents\jdk-15\javafx-sdk-15.0.1\lib --add-modules=ALL-MODULE-PATH"/>
            <classpath refid="run.froggercw.classpath"/>
        </java>
    </target>
    <target name="GameMenu">
        <java classname="p4_group_8_repo.GameMenu" failonerror="true" fork="yes">
            <classpath refid="run.GameMenu.classpath"/>
        </java>
    </target>
    <target name="Main (4)">
        <java classname="application.Main" failonerror="true" fork="yes">
            <classpath refid="run.Main (4).classpath"/>
        </java>
    </target>
              	<target name="war" description="Bundles the application as a WAR file" depends="clean, build">
              	    <mkdir dir="src"/>
              	     
              	    <copy includeemptydirs="false" todir="src">
              	            <fileset dir="build/classes">
              	            <include name="**/*.class"/>
              	            </fileset>
              	    </copy>
              	     
              	    <war destfile="UploadServlet30.war"
              	        basedir="src"
              	        needxmlfile="false">
              	    </war>
              	</target>
</project>
